Move index.html to top level

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Old Lady Game</title>
 
-  <link rel="stylesheet" href="../scr/stylesheets/main.css">
-  <script type="text/javascript" src="../app/assets/javascripts/bundle.js" charset="utf-8" defer></script>
+  <link rel="stylesheet" href="./scr/stylesheets/main.css">
+  <script type="text/javascript" src="./app/assets/javascripts/bundle.js" charset="utf-8" defer></script>
   <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
 </head>
 
@@ -17,7 +17,7 @@
   <div id="app">
     <h1>Old Lady Game</h1>
     <audio controls autoplay>
-      <source src="../scr//media/song.mp3" type="audio/mpeg">
+      <source src="./scr//media/song.mp3" type="audio/mpeg">
     </audio>
     <div id="buttons">
       <button id="reset">New Game</button>
@@ -27,4 +27,4 @@
   </div>
 </body>
 
-</html>
+</html>/Users/Lisa/Desktop/OldLadyGame/index.html
