--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
 
 <body>
   <div id="app">
-    <h1>Old Lady Game</h1>
-    <audio controls autoplay>
-      <source src="./scr//media/song.mp3" type="audio/mpeg">
-    </audio>
-    <div id="buttons">
-      <button id="reset">New Game</button>
-      <div id="scores"></div>
+    <div id="main">
+      <h1>Old Lady Game</h1>
+      <div id="buttons">
+        <button id="reset">New Game</button>
+        <div id="scores"></div>
+      </div>
+      <canvas id="canvas" height="400" width="400"></canvas>
     </div>
-    <canvas id="canvas" height="400" width="400"></canvas>
+    <!-- <audio controls autoplay>
+      <source src="./scr//media/song.mp3" type="audio/mpeg">
+    </audio> -->
+    <!-- <video width="560" height="315">
+      <source src="https://www.youtube.com/embed/ApmEM9-xA2c" type=video/ogg>
+    </video> -->
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=" allow="autoplay"></iframe> -->
+    <!-- <iframe id="video" src="https://youtu.be/ApmEM9-xA2c?autoplay=1" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+      <iframe width="560" height="315" src='https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&controls=0' frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </body>
 
-</html>/Users/Lisa/Desktop/OldLadyGame/index.html
+</html>
