Set video as background

--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
       </div>
       <canvas id="canvas" height="400" width="400"></canvas>
     </div>
-    <!-- <audio controls autoplay>
-      <source src="./scr//media/song.mp3" type="audio/mpeg">
-    </audio> -->
-    <!-- <video width="560" height="315">
-      <source src="https://www.youtube.com/embed/ApmEM9-xA2c" type=video/ogg>
-    </video> -->
-    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=" allow="autoplay"></iframe> -->
-    <!-- <iframe id="video" src="https://youtu.be/ApmEM9-xA2c?autoplay=1" frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-      <iframe width="560" height="315" src='https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&controls=0' frameborder="0"
+      <iframe id="video" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe id="video"
+          src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&rel=0&modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0"
+          allowfullscreen></iframe> -->
   </div>
 </body>
 
