--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       </div>
       <canvas id="canvas" height="400" width="400"></canvas>
     </div>
-      <iframe id="video" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="video" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <button id="mute">Mute</button>
   </div>
 </body>
 
