--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
         <div id="scores"></div>
       </div>
       <canvas id="canvas" height="400" width="400"></canvas>
-      <iframe id="video" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="video" type="text/html" width="640" height="360"
+        src="https://www.youtube.com/embed/ApmEM9-xA2c?&autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=0&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=ApmEM9-xA2c"
+        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!-- <iframe width="560" height="315" src="http://www.youtube.com/v/ApmEM9-xA2c?version=3&autoplay=1&loop=1&playlist=ApmEM9-xA2c"></iframe> -->
+      <!-- <iframe id="video" src="https://www.youtube.com/embed/ApmEM9-xA2c?autoplay=1&loop=1&modestbranding=1&autohide=1&showinfo=0&controls=1" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
       <button id="mute">Mute</button>
     </div>
   </div>
