--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="nav"><h1>Old Lady Game</h1></div>
+  <div id="nav"><h1>2-0-4-Ate</h1></div>
   <div id="app">
     <div id="info"></div>
     <div id="main">
