--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <script type="text/javascript" src="./app/assets/javascripts/bundle.js" charset="utf-8" defer></script>
   <script src="https://kit.fontawesome.com/df58c58326.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <div id="nav"><h1>2-0-4-Ate</h1></div>
