--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="./app/assets/javascripts/bundle.js" charset="utf-8" defer></script>
   <script src="https://kit.fontawesome.com/df58c58326.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Sulphur+Point&display=swap" rel="stylesheet">
-  <!-- <link rel="icon" type="image/png" href="/favicon.jpg"> -->
+  <link rel="icon" type="image/png" href="/favicon.jpg">
 </head>
 <body>
   <div id="nav"><h1>2-0-4-Ate</h1></div>
